# Black-white-FileSystem

./: CMakeLists.txt  bmpGen.c  bmpGen.h  bwfs.c  main.c  structure.h  structure_functions.c
.gitignore/: .gitignore
